bug: fix task not showing and alignment issues

--- a/src/components/dasboard/TaskItems.module.scss
+++ b/src/components/dasboard/TaskItems.module.scss
@@ -19,6 +19,7 @@
           background: #f9f7ff;
           border: 1px solid #714dd9;
           border-radius: 4px 0px 0px 4px;
+          cursor: pointer;
         }
         .text {
           display: flex;
@@ -26,6 +27,7 @@
           padding: 10px;
           background: #714dd9;
           border-radius: 0px 4px 4px 0px;
+          width: 95px;
 
           font-family: "Open Sans";
           font-style: normal;
